[gd_scene load_steps=19 format=3 uid="uid://dinajqbfko0y"]

[ext_resource type="Script" path="res://scripts/green_goblin.gd" id="1_gwg3k"]
[ext_resource type="Texture2D" uid="uid://bj03m4yh64d43" path="res://assets/characters/enemyG_placeholder.png" id="1_tf3ux"]
[ext_resource type="PackedScene" uid="uid://pkfb6tq1qoo4" path="res://scenes/health_component.tscn" id="3_q4q4w"]
[ext_resource type="Texture2D" uid="uid://dkh3djecywx8b" path="res://assets/enemy2_running.png" id="3_q7btm"]
[ext_resource type="AudioStream" uid="uid://buwt218qnhtv0" path="res://assets/sounds/hitHurt.wav" id="5_b5t1l"]
[ext_resource type="AudioStream" uid="uid://d0575wpkrm3yo" path="res://assets/sounds/notHurt.wav" id="6_xj6cd"]
[ext_resource type="AudioStream" uid="uid://bahrk1oxcowgx" path="res://assets/sounds/goblinDown.wav" id="7_dquh7"]
[ext_resource type="AudioStream" uid="uid://cfgkt6p30luk1" path="res://assets/sounds/gunShot.wav" id="8_emvcj"]

[sub_resource type="Shader" id="Shader_piqjy"]
code = "shader_type canvas_item;
uniform bool hurt = false;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	if(hurt)
	{
		COLOR.gb = vec2(COLOR.gb * (sin(TIME * 12.0) / 5.0 + 0.5));
	}
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xk6ju"]
shader = SubResource("Shader_piqjy")
shader_parameter/hurt = false

[sub_resource type="AtlasTexture" id="AtlasTexture_iselg"]
atlas = ExtResource("3_q7btm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjqbu"]
atlas = ExtResource("3_q7btm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_igth4"]
atlas = ExtResource("3_q7btm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glb4l"]
atlas = ExtResource("3_q7btm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncuo"]
atlas = ExtResource("3_q7btm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5jr3"]
atlas = ExtResource("3_q7btm")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o0fwx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tf3ux")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iselg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjqbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igth4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glb4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5jr3")
}],
"loop": true,
"name": &"new_animation",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1pke"]
height = 40.0

[node name="greenGoblin" type="Area2D"]
script = ExtResource("1_gwg3k")
Speed = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_xk6ju")
sprite_frames = SubResource("SpriteFrames_o0fwx")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.283196

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_m1pke")

[node name="HealthComponent" parent="." instance=ExtResource("3_q4q4w")]
max_health = 5

[node name="ShootBulletTimer" type="Timer" parent="."]
autostart = true

[node name="BulletSpawnMarker2DRight" type="Marker2D" parent="."]
position = Vector2(18, 3)

[node name="BulletSpawnMarker2DLeft" type="Marker2D" parent="."]
position = Vector2(-18, 3)

[node name="HurtTimer" type="Timer" parent="."]

[node name="HurtAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_b5t1l")
bus = &"SFX"

[node name="NotHurtAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xj6cd")
bus = &"SFX"

[node name="DoomDoomDeadosAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dquh7")
bus = &"SFX"

[node name="GunShotAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_emvcj")
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="timeout" from="ShootBulletTimer" to="." method="_on_shoot_bullet_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
